Source/WebCore/platform/graphics/nicosia/texmap/NicosiaContentLayerTextureMapperImpl.h
@@ -50,7 +50,6 @@ public:
     };
 
     static Factory createFactory(Client&);
-    static Factory createFactory(Client&, Ref<WebCore::TextureMapperPlatformLayerProxy>&&);
 
     explicit ContentLayerTextureMapperImpl(Client&, Ref<WebCore::TextureMapperPlatformLayerProxy>&&);
     virtual ~ContentLayerTextureMapperImpl();
